# seychelles

./: .gitignore  CMakeLists.txt  command.h  command_registry.cpp  command_registry.h  commands.cpp  insults.cpp  insults.h  libedit.cpp  libedit.h  log.cpp  log.h  safe_exit.h  seychelles.cpp  ssh.cpp  ssh.h
